--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "body-parser": "1.19.0",
     "express": "4.17.1",
     "mysql": "2.18.1",
-    "tedious": "11.0.3"
+    "tedious": "11.0.3",
+    "zip-folder": "1.0.0",
+    "request": "2.88.2"
   },
   "devDependencies": {
     "nodemon": "2.0.7"
