azure web conf changes

--- a/web.config
+++ b/web.config
@@ -32,6 +32,16 @@
           </conditions>
           <action type="Rewrite" url="server.js"/>
         </rule>
+
+        <rule name="Main Rule" stopProcessing="true">
+            <match url=".*" />
+            <conditions logicalGrouping="MatchAll">
+                <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+                <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+            </conditions>
+            <action type="Rewrite" url="/" />
+        </rule>
+
       </rules>
     </rewrite>
     
